# clothespin

./: Cargo.toml  Makefile
examples/: bench_parser.rs  bench_rspy_parser.rs
src/: lib.rs  parsing.rs  re.rs  str_util.rs
test_data/: parser-1.txt  parser-2.txt
tests/: parser.rs
